--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,21 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.11</version>
 		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.9.2</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.9.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+		</dependency>
 
 	</dependencies>
 
@@ -78,5 +93,16 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<profiles>
+		
+		<profile>
+			<id>local</id>
+			<properties>
+				<spring.profile>local</spring.profile>
+			</properties>
+		</profile>
+
+	</profiles>
 
 </project>
